--- a/style.css
+++ b/style.css
@@ -221,6 +221,12 @@ body {
   height: 100%;
 }
 
+@media only screen and (max-width: 1100px) {
+  .content__about {
+    width: 100%;
+  }
+}
+
 @media only screen and (max-width: 750px) {
   .content__about-wrapper {
     flex-direction: column;
