--- a/style.css
+++ b/style.css
@@ -12,6 +12,17 @@ html {
 
 body {
   background-color: whitesmoke;
+  cursor: none;
+}
+
+a {
+  text-decoration: none;
+  cursor: none;
+}
+
+a:hover {
+  text-decoration: underline;
+  text-underline-offset: 3px;
 }
 
 .for--desktop__main,
@@ -47,6 +58,18 @@ body {
   }
 }
 
+/*----------------------cursor------------------*/
+
+.small {
+  width: 8px;
+  height: 8px;
+  border: 2px solid #fff;
+  background-color: white;
+  border-radius: 50%;
+  mix-blend-mode: difference;
+  z-index: 9999;
+}
+
 /* -------------------menu---------------------------- */
 
 .menu--desktop {
@@ -74,6 +97,7 @@ body {
 .menu--desktop ul a:hover {
   background-color: #74c043;
   border-radius: 80%;
+  font-weight: 550;
 }
 
 .menu__item {
@@ -87,9 +111,21 @@ body {
   list-style: none;
 }
 
+.menu__black-bg {
+  position: relative;
+  top: 50px;
+  right: 40%;
+  border: 1px red solid;
+  background-color: black;
+  width: 20px;
+  height: 40px;
+  border-radius: 80%;
+}
+
 .active-page {
   background-color: #74c043;
   border-radius: 80%;
+  font-weight: 550;
 }
 
 @media only screen and (max-width: 750px) {
@@ -259,8 +295,9 @@ body {
 }
 
 .content__about-img img {
-  width: auto;
+  width: 100%;
   height: 100%;
+  object-fit: cover;
 }
 
 @media only screen and (max-width: 1100px) {
@@ -356,7 +393,6 @@ body {
   height: 100%;
   -o-object-fit: cover;
   object-fit: cover;
-  cursor: crosshair;
 }
 
 .content__vis--grid__item__info {
@@ -377,7 +413,7 @@ body {
   font-style: italic;
   letter-spacing: 2px;
 
-  text-decoration-line: underline;
+  text-decoration-line: none;
   text-transform: uppercase;
   text-underline-offset: 5px;
   text-align: left;
