--- a/style.css
+++ b/style.css
@@ -61,6 +61,8 @@ a:hover {
 /*----------------------cursor------------------*/
 
 .small {
+  position: absolute;
+  left: -12px;
   width: 8px;
   height: 8px;
   border: 2px solid #fff;
