--- a/style.css
+++ b/style.css
@@ -2,6 +2,10 @@
   --main-font: "lores-12", sans-serif;
 }
 
+* {
+  box-sizing: border-box;
+}
+
 body,
 html {
   margin: 0 auto;
@@ -16,7 +20,6 @@ body {
 
 a {
   text-decoration: none;
-  cursor: none;
 }
 
 a:hover {
@@ -24,9 +27,12 @@ a:hover {
   text-underline-offset: 3px;
 }
 
-.for--desktop__main,
-.for--mobile__main {
+.for--desktop__main {
   background-color: whitesmoke;
+}
+
+.for--mobile__main {
+  background-color: none;
 }
 
 #for--mobile {
@@ -54,9 +60,6 @@ a:hover {
 }
 
 @media only screen and (max-width: 750px) {
-  body {
-    cursor: pointer;
-  }
   #for--desktop {
     display: none;
   }
@@ -86,6 +89,11 @@ a:hover {
 
 .menu-wrapper {
   height: fit-content;
+  padding-top: 10px;
+}
+
+.menu-wrapper__landing {
+  height: 70px;
   padding-top: 10px;
 }
 
@@ -168,30 +176,38 @@ a:hover {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    cursor: pointer;
     top: 15px;
   }
 
+  .menu-wrapper {
+    padding-top: 0;
+  }
+
+
   .hamburger span {
-    width: 25px;
+    width: 35px;
     height: 3px;
     background-color: black;
     margin: 4px 0;
     transition: 0.3s;
     z-index: 10;
+    border-radius: 50px;
   }
 
   .menu--mobile {
+    background-color: whitesmoke;
     margin: 0 auto;
     padding: 15px;
     display: block;
     position: relative;
-    background-color: white;
     z-index: 9;
   }
 
   .menu-list--mobile {
     background-color: white;
+    border: 10px solid #74c043;
+    background-image: url(/assets/images/scanned-imgs/scans__202407/Scan33.jpeg);
+    background-position: 75% 30%;
     display: none;
     flex-direction: column;
     align-items: center;
@@ -214,6 +230,11 @@ a:hover {
     font-size: 30px;
   }
 
+  .white-bg {
+    background-color: whitesmoke;
+  }
+
+
   /* Show the menu when the checkbox is checked */
   #toggle-menu:checked + .hamburger + .menu-list--mobile {
     display: flex;
@@ -230,49 +251,129 @@ a:hover {
 
 .marquee {
   user-select: none;
-  display: flex;
-  height: 30px;
-  overflow: hidden;
-  background-color: black;
-  z-index: -1;
+    display: flex;
+    justify-content: flex-start;
+    position: relative;
+    font-size: 10px;
+    width: 100%; /* Full width */
+    height: 40px;
+    overflow: hidden; /* Hide overflow */
+    z-index: 10;
+    color: white;
+    font-family: var(--main-font);
+    background-color: black;
 }
 
 .marquee__text {
-  flex-shrink: 0;
   display: flex;
+  flex-wrap: nowrap;
+  white-space: nowrap;
+  animation: scroll 15s linear infinite;
+}
+
+.professions {
+  font-family: var(--main-font);
+  font-size: 10px;
+  color: white;
+  width: 100%;
+}
+
+.professions div {
+  background-color: black;
+  margin: 0 auto;
+  margin-top: -20px;
+  padding: 0 15px;
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  gap: 30px;
+  width: fit-content;
+  height: fit-content;
+  border-radius: 20px;
+}
+
+.professions div h1 {
+  display: inline-flex;
+  justify-content: center;
   align-items: center;
-  justify-content: space-between;
-  min-width: 100%;
-  animation: marquee-scroll 100s linear infinite;
+  font-weight: 300;
 }
 
-@keyframes marquee-scroll {
+@keyframes scroll {
   0% {
-    transform: translateX(0);
+      transform: translateX(100%); /* Start outside the right side */
   }
-
   100% {
-    transform: translateX(calc(-100% - 2px));
+      transform: translateX(-100%); /* Move to outside the left side */
   }
 }
+
+@-webkit-keyframes scroll {
+  0% {
+    -webkit-transform: translateX(100%);
+    transform: translateX(100%);
+  }
+  100% {
+    -webkit-transform: translateX(-100%);
+    transform: translateX(-100%);
+  }
+}
+
+@-moz-keyframes scroll {
+  0% {
+    -moz-transform: translateX(100%);
+    transform: translateX(100%);
+  }
+  100% {
+    -moz-transform: translateX(-100%);
+    transform: translateX(-100%);
+  }
+}
+
 
 .marquee__text-string {
+  display: flex;
+  margin-right: 50px;
+  min-width: 100vw;
+}
+
+.marquee__text-string h1 {
   white-space: nowrap;
-  text-transform: lowercase;
-  font-family: var(--main-font);
-  font-size: 1.1em;
-  color: white;
-  letter-spacing: 2px;
+  letter-spacing: 1px;
+}
+.marquee__text h1 {
+  margin: 0 10px;
+  font-size: 1.5rem; /* Adjust the size as needed */
+}
+
+
+.logo-landing {
+  fill: white;
+  stroke: black;
+  margin-top: 5em;
 }
 
 .logo-wrapper svg {
+  margin: 0;
+  padding: 0;
   width: 100%;
 }
 
 @media only screen and (max-width: 740px) {
   .logo-wrapper {
     padding-top: 5px;
-    background-color: white;
+  }
+
+  .logo-landing {
+    fill: white;
+    stroke: black;
+    margin-top: 5em;
+  }
+  
+  .logo-wrapper svg {
+    margin: 0 auto;
+    padding: 0;
+    display: flex;
   }
 
   .marquee {
@@ -287,6 +388,11 @@ a:hover {
   .marquee__text-string {
     font-size: 1em;
     padding: 5px 0;
+  }
+
+  .professions div {
+    flex-direction: column;
+    gap: 1px;
   }
 }
 
@@ -480,7 +586,7 @@ a:hover {
   margin: 0 auto;
   padding: 12px;
   width: 95%;
-  height: 400px;
+  height: fit-content;
   background-color: rgba(0, 0, 0, 80%);
   border-radius: 2px;
 }
@@ -490,7 +596,7 @@ a:hover {
 }
 
 .grid-item-link {
-  cursor: pointer;
+  cursor: grabbing;
 }
 
 .content__vis--grid__item__img {
@@ -746,7 +852,7 @@ footer {
 }
 
 .grid-item-link {
-  cursor: pointer;
+  cursor: grab;
 }
 
 .content__vis--grid__item__img {
