--- a/style.css
+++ b/style.css
@@ -1,7 +1,10 @@
+/* ---------------------- Root Variables ---------------------- */
 :root {
   --main-font: "lores-12", sans-serif;
+  --accent-white: whitesmoke;
 }
 
+/* ---------------------- Global Styles ---------------------- */
 * {
   box-sizing: border-box;
 }
@@ -12,11 +15,15 @@ html {
   padding: 0;
   width: 100%;
   height: 100%;
+  overflow: hidden;
 }
 
 body {
-  background-color: whitesmoke;
+  background-color: var(--accent-white);
   cursor: grab;
+}
+
+/* ---------------------- Links ---------------------- */
 
 a {
   text-decoration: none;
@@ -27,12 +34,14 @@ a:hover {
   text-underline-offset: 3px;
 }
 
-.for--desktop__main {
-  background-color: whitesmoke;
+/* ---------------------- Layout Containers ---------------------- */
+
+.d-content {
+  margin: 0 auto;
 }
 
 .for--mobile__main {
-  background-color: none;
+  background-color: transparent;
 }
 
 #for--mobile {
@@ -47,17 +56,16 @@ a:hover {
   object-position: center bottom;
   transform: rotate(180deg);
 
-  z-index: -9999;
+  z-index: -999;
 }
-
 
 .line-divider {
   height: 10px;
   background-color: #74c043;
 }
 
-@media only screen and (max-width: 750px) {
-  #for--desktop {
+@media only screen and (max-width: 740px) {
+  #desktop-content-wrapper {
     display: none;
   }
 
@@ -89,7 +97,7 @@ a:hover {
   padding-top: 10px;
 }
 
-.menu-wrapper__landing {
+.menu-landing-wrapper {
   height: 70px;
   padding-top: 10px;
 }
@@ -97,11 +105,16 @@ a:hover {
 .menu--desktop {
   margin: 0 auto;
   margin-bottom: 10px;
-  background-color: whitesmoke;
+  background-color: var(--accent-white);
   display: flex;
   justify-content: center;
   position: sticky;
   top: 0;
+  height: 4em;
+}
+
+.menu--desktop--oth {
+  background-color: transparent;
 }
 
 .menu--mobile {
@@ -138,6 +151,7 @@ a:hover {
   border: 2px solid #74c043;
   color: black;
   border-radius: 80%;
+  background-color: whitesmoke;
   font-family: var(--main-font);
   text-transform: uppercase;
   text-decoration: none;
@@ -163,6 +177,8 @@ a:hover {
   font-weight: 530;
 }
 
+/* ---------------------- Media Queries ---------------------- */
+
 @media only screen and (max-width: 750px) {
   #toggle-menu {
     display: none;
@@ -180,7 +196,6 @@ a:hover {
     padding-top: 0;
   }
 
-
   .hamburger span {
     width: 35px;
     height: 3px;
@@ -192,7 +207,7 @@ a:hover {
   }
 
   .menu--mobile {
-    background-color: whitesmoke;
+    background-color: var(--accent-white);
     margin: 0 auto;
     padding: 15px;
     display: block;
@@ -228,9 +243,8 @@ a:hover {
   }
 
   .white-bg {
-    background-color: whitesmoke;
+    background-color: var(--accent-white);
   }
-
 
   /* Show the menu when the checkbox is checked */
   #toggle-menu:checked + .hamburger + .menu-list--mobile {
@@ -248,17 +262,17 @@ a:hover {
 
 .marquee {
   user-select: none;
-    display: flex;
-    justify-content: flex-start;
-    position: relative;
-    font-size: 10px;
-    width: 100%; /* Full width */
-    height: 40px;
-    overflow: hidden; /* Hide overflow */
-    z-index: 10;
-    color: white;
-    font-family: var(--main-font);
-    background-color: black;
+  display: flex;
+  justify-content: flex-start;
+  position: relative;
+  font-size: 10px;
+  width: 100%; /* Full width */
+  height: 40px;
+  overflow: hidden; /* Hide overflow */
+  z-index: 10;
+  color: white;
+  font-family: var(--main-font);
+  background-color: black;
 }
 
 .marquee__text {
@@ -278,7 +292,7 @@ a:hover {
 .professions div {
   background-color: black;
   margin: 0 auto;
-  margin-top: -20px;
+  margin-top: -2rem;
   padding: 0 15px;
   display: flex;
   justify-content: center;
@@ -298,10 +312,10 @@ a:hover {
 
 @keyframes scroll {
   0% {
-      transform: translateX(100%); /* Start outside the right side */
+    transform: translateX(100%); /* Start outside the right side */
   }
   100% {
-      transform: translateX(-100%); /* Move to outside the left side */
+    transform: translateX(-100%); /* Move to outside the left side */
   }
 }
 
@@ -327,7 +341,6 @@ a:hover {
   }
 }
 
-
 .marquee__text-string {
   display: flex;
   margin-right: 50px;
@@ -343,15 +356,28 @@ a:hover {
   font-size: 1.5rem; /* Adjust the size as needed */
 }
 
-
 .logo-landing {
+  margin: 0 auto;
+  position: relative;
+  width: 80vw;
+  height: 60vh;
+  overflow: hidden;
   fill: white;
   stroke: black;
   margin-top: 5em;
 }
 
+#draggable-svg {
+  position: absolute;
+  cursor: grab; /* Show a grab cursor when hovering over the SVG */
+}
+
+.logo-wrapper {
+  margin-top: 2em;
+}
+
 .logo-wrapper svg {
-  margin: 0;
+  margin: 0 auto;
   padding: 0;
   width: 100%;
 }
@@ -366,7 +392,7 @@ a:hover {
     stroke: black;
     margin-top: 5em;
   }
-  
+
   .logo-wrapper svg {
     margin: 0 auto;
     padding: 0;
@@ -390,6 +416,7 @@ a:hover {
   .professions div {
     flex-direction: column;
     gap: 1px;
+    margin-top: -12rem;
   }
 }
 
@@ -542,7 +569,7 @@ a:hover {
 
 .fredito__logo a {
   background-color: black;
-  border: 4px solid whitesmoke;
+  border: 4px solid var(--accent-white);
   margin: 0 auto;
   padding: 15px 35px;
   border-radius: 100px;
@@ -554,7 +581,7 @@ a:hover {
   margin-top: -10px;
   padding: 0;
   text-decoration: none;
-  color: whitesmoke;
+  color: var(--accent-white);
 }
 
 .fredito__logo a img {
@@ -660,7 +687,7 @@ a:hover {
   }
 
   .content__vis--grid__item {
-    width: 95%;
+    width: 100%;
   }
 
   .visz-legend {
